--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,4 +13,10 @@
         <filter-name>sitemesh</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <error-page>
+        <exception-type>java.lang.RuntimeException</exception-type>
+        <location>/pages/error/error.jsp</location>
+    </error-page>
+
 </web-app>
