--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
     <error-page>
         <exception-type>java.lang.RuntimeException</exception-type>
-        <location>/pages/error/error.jsp</location>
+        <location>/pages/error/error_page.jsp</location>
     </error-page>
 
 </web-app>
