--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -1,6 +1,6 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.rootLogger=DEBUG,A1
-log4j.appender.R.File=/home/rifatul.islam/apache-tomcat-7.0.29/logs/debug.log
+log4j.rootLogger=DEBUG, stdout
+log4j.appender.R.File=/home/rifatul.islam/apache-tomcat-7.0.53/logs/debug.log
 log4j.appender.R.MaxFileSize=1000KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.MaxBackupIndex=5
