--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <description>sessionListener</description>
+        <listener-class>
+            net.therap.mealScheduler.listener.SessionListener
+        </listener-class>
+    </listener>
+
     <error-page>
         <exception-type>java.lang.RuntimeException</exception-type>
         <location>/pages/error/error_page.jsp</location>
