--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'war'
 
-jar.enabled = false
-war.archiveName = 'meal.war'
+defaultTasks 'deploy'
+
+webAppDirName = 'web/'
 
 repositories {
     mavenCentral()
@@ -12,13 +13,18 @@ dependencies {
     compile "org.slf4j:slf4j-api:1.7.7"
     compile "ch.qos.logback:logback-classic:1.1.2"
     compile "ch.qos.logback:logback-core:1.1.2"
-    providedCompile "org.jfree:jcommon:1.0.17"
+    compile "org.jfree:jcommon:1.0.17"
 
-    providedCompile 'opensymphony:sitemesh:2.4.2'
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
     providedCompile 'javax.servlet:jsp-api:2.0'
 
     runtime 'mysql:mysql-connector-java:5.1.30'
     runtime 'javax.servlet:jstl:1.2'
+    runtime 'opensymphony:sitemesh:2.4.2'
+}
+
+task deploy(type: Copy) {
+    from 'build/libs/meal_scheduler.war'
+    into '/home/rifatul.islam/apache-tomcat-7.0.53/webapps/'
 }
 
